[gd_scene load_steps=7 format=3 uid="uid://bprt74y8utkd8"]

[ext_resource type="Script" path="res://script/interact/escada_component.gd" id="1_y7jb1"]
[ext_resource type="Texture2D" uid="uid://cvuufgpkuetcy" path="res://sprites/resources/tile/Dungeon_Tileset.png" id="2_0qg64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qg64"]
size = Vector2(33, 16)

[sub_resource type="Animation" id="Animation_f08if"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [39]
}

[sub_resource type="Animation" id="Animation_0qg64"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f08if"]
_data = {
"RESET": SubResource("Animation_f08if"),
"open": SubResource("Animation_0qg64")
}

[node name="EscadaComponent" type="Area2D" node_paths=PackedStringArray("_animation")]
collision_layer = 2
script = ExtResource("1_y7jb1")
_teleport_position = Vector2(84, 140)
_animation = NodePath("Animation")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(8.5, 0)
shape = SubResource("RectangleShape2D_0qg64")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3.8147e-06, 0.129999)
texture = ExtResource("2_0qg64")
hframes = 10
vframes = 10
frame = 39

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f08if")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
